--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-calendars": "^1.1302.0",
-    "react-native-modal": "^13.0.1"
+    "react-native-dialog": "^9.3.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-popover-view": "^5.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
