--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
@@ -19,8 +20,11 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-calendars": "^1.1302.0",
     "react-native-dialog": "^9.3.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-modal": "^13.0.1",
-    "react-native-popover-view": "^5.1.8"
+    "react-native-picker-select": "^9.0.0",
+    "react-native-popover-view": "^5.1.8",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
