--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.0.0",
     "react-native-popover-view": "^5.1.8",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
